# edutap.wallet_google

./: .flake8  .gitignore  .gitlab-ci.yml  .meta.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  mypy.ini  pyproject.toml  tox.ini  tox.ini.old
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: Bug report.md  Feature_proposal.md  Question.md
.github/workflows/: ci.yaml  daily-test.yml  integrationtests.yaml  meta.yml  release.yaml  tests.yaml  unittests.yaml
docs/: edutap_wallet_google  explanation.md  index.md  installation.md  reference.md  tutorials.md
examples/edutap_wallet_google_example_callback/: Dockerfile  README.md  edutap_wallet_google_example_callback.py  edutap_wallet_google_inactive_example_image.py  pyproject.toml  requirements.txt  swarm.yml
src/edutap/google_wallet/: __init__.py  api.py  registry.py  session.py
src/edutap/google_wallet/model/primitives/: __init__.py  app.py  barcode.py  enums.py  localized_string.py  notification.py  smarttap.py
src/edutap/google_wallet/models/: __init__.py  generic.py  retail.py  ticket_and_transit.py
src/edutap/google_wallet/models/primitives/: class_template_info.py  location.py  retail.py
src/edutap/wallet_google/: __init__.py  api.py  api_async.py  clientpool.py  credentials.py  exceptions.py  factory.py  jwt_utils.py  modelbase.py  modelcore.py  plugins.py  protocols.py  registry.py  session.py  session_async.py  settings.py  utils.py
src/edutap/wallet_google/_vendor/: google_pay_token_decryption.py
src/edutap/wallet_google/handlers/: fastapi.py  validate.py
src/edutap/wallet_google/models/: __init__.py  bases.py  callback.py  deprecated.py  generic.py  handlers.py  issuer.py  jwt.py  message.py  misc.py  retail.py  ticket_and_transit.py  tickets_and_transit.py
src/edutap/wallet_google/models/datatypes/: barcode.py  class_template_info.py  data.py  datetime.py  enums.py  event.py  flight.py  general.py  jwt.py  localized_string.py  location.py  loyalty.py  message.py  moduledata.py  money.py  notification.py  retail.py  review.py  smarttap.py  transit.py
src/edutap/wallet_google/models/passes/: __init__.py  bases.py  generic.py  genericprivate.py  retail.py  tickets_and_transit.py
src/edutap/wallet_google/models/primitives/: __init__.py  app.py  barcode.py  class_template_info.py  data.py  datetime.py  enums.py  jwt.py  localized_string.py  location.py  message.py  moduledata.py  money.py  notification.py  retail.py  review.py  smarttap.py
tests/: conftest.py  test_api_403_errors.py  test_api_async.py  test_api_async_basic.py  test_api_async_crud.py  test_api_convert_to_json.py  test_api_create.py  test_api_crud.py  test_api_jwt.py  test_api_save_link.py  test_api_sync.py  test_check_models.py  test_clientpool.py  test_enum.py  test_fields_validate.py  test_handler_fastapi.py  test_handler_validate.py  test_handler_validate_async.py  test_model_validators.py  test_partial_requests.py  test_plugins.py  test_registry.py  test_registry_values.py  test_session.py  test_settings.py  test_utils_encrypt.py  test_vendor_google_pay_token_encryptions.py
tests/data/: CreateGenericClass.REQUEST.json  CreateGenericClass.RESPONSE.json  CreateGenericObject.REQUEST.json  CreateGenericObject.RESPONSE.json  credentials_fake.json  discovery_api_data.json  wallet_api_data.json
tests/data/test_wallet_google_plugins/: plugins.py  pyproject.toml
tests/integration/: test_CRULM.py  test_CRU_class.py  test_async_CRULM.py  test_create_class.py  test_create_generic_class.py
