[project]
name = "edutap.wallet-google"
dynamic = ["version"]
description = "Library for Google Wallet Communication"
keywords = ["wallet", "google", "api", "pass", 'fastapi', 'digital identity']
readme = "README.md"
authors = [
    {name = "Alexander Loechel", email = "Alexander.Loechel@lmu.de"},
    {name = "Philipp Auersperg-Castell", email = "phil@bluedynamics.com"},
    {name = "Jens Klein", email = "jk@kleinundpartner.at"},
    {name = "Robert Niederreiter", email = "office@squarewave.at"},
]
requires-python = ">=3.10"
license = { text = "EUPL 1.2" }
# TODO for PEP 639 https://peps.python.org/pep-0639
# -> when implemented in PyPI, twine, pyroma, etc.
# add license-expression = EUPL-1.2
# add license-file = LICENSE
# remove license field
# remove License classifier

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "authlib",
    "cryptography",
    "httpx",
    "pydantic-settings",
    "pydantic[email]>=2.0",
  ]

[project.urls]
Source = "https://github.com/edutap-eu/edutap.wallet_google"
Issues = "https://github.com/edutap-eu/edutap.wallet_google/issues"
Documentation = "https://docs.edutap.eu/packages/edutap_wallet_google/index.html"

[project.optional-dependencies]
callback = [
    "fastapi",
]
test = [
    "edutap.wallet-google[callback]",
    "freezegun",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-explicit",
    "pytest",
    "respx",
    "tox",
]
typecheck  = [
    "ty",
]
develop = [
    "pdbp>=1.7.1", # the maintained successor to pdbpp
    # "ipython",  not recommended with pdpb, better use ipdb then
]

[project.scripts]
generate-fernet-key = "edutap.wallet_google.utils:generate_fernet_key"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/edutap/wallet_google/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/edutap"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = "--cov=edutap.wallet_google --cov-report term --cov-report html"
markers = [
    "integration: Test are running against the real Google Wallet API, needs account configuration. (deselect with '-m \"not integration\"')",
]
# https://pypi.org/project/pytest-explicit/
explicit-only = [
    "integration",
]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
no-sections = true
order-by-type = false

[tool.ty.src]
exclude = ["worktrees/"]

[tool.ty.environment]
python-version = "3.10"
extra-paths = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "warn"
# the following rules are stricter than mypy; downgrade to warnings for now
unresolved-attribute = "warn"
invalid-argument-type = "warn"
unknown-argument = "warn"
not-iterable = "warn"

[tool.codespell]
ignore-words-list = "discreet,"

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".pre-commit-config.yaml",
    "worktrees/**",
    "src/edutap/wallet_google/_version.py",
]

[tool.tox]
min_version = "4.4.0"
env_list = ["py310", "py311", "py312", "py313", "py314", "lint"]

[tool.tox.gh.python]
"3.10" = ["py310"]
"3.11" = ["py311"]
"3.12" = ["py312"]
"3.13" = ["py313"]
"3.14" = ["py314"]

[tool.tox.env_run_base]
description = "run tests"
use_develop = true
skip_install = false
deps = ["-e tests/data/test_wallet_google_plugins"]
commands = [["pytest", { replace = "posargs", extend = true }]]
extras = ["test", "develop"]

[tool.tox.env.format]
description = "automatically reformats code"
skip_install = true
deps = ["pre-commit"]
commands = [
    ["pre-commit", "run", "-a", "ruff"],
    ["pre-commit", "run", "-a", "ruff-format"],
]

[tool.tox.env.lint]
description = "run linters that will help improve the code style"
skip_install = true
deps = ["pre-commit"]
commands = [["pre-commit", "run", "-a"]]
